# kitchen-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  demand.py  kitchen_env.py  models.py  reward.py
server/: app.py
tasks/: __init__.py  task1_stock.py  task2_waste.py  task3_shift.py
